--- a/DONGOLABETKOOM.html
+++ b/DONGOLABETKOOM.html
@@ -29,7 +29,7 @@
       <div class="home-text">
         <h1>دنقلا<br>بيتكم</h1>
         <p>As we work to create light for others, we naturally light our own way.</p>
-        <a href="#" class="home-btn">join us</a>
+        <a href="Contact.html" class="home-btn">join us</a>
       </div>
     </section>
     <!--container--->
